--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,7 @@
         </style>
     </head>
     <body>
-        <script type="text/javascript" src="js/main.js"></script>
-        <script type="text/javascript" src="js/lib/jquery-2.2.1.js"></script>
-        <script type="text/javascript" src="js/lib/bootstrap.js"></script>    
+        <div id="APP"></div>
+        <script data-main="js/config.js" src="js/lib/require.js"></script>
     </body>
 </html>
